--- a/example.html
+++ b/example.html
@@ -9,8 +9,8 @@
 		<div id="container2"></div>
 		<input type="button" value="Получить значения" onclick="console.log(tableInst2.getData());">
 		<script>
-			tableInst1 = jstable.create('container1', 3,3);
-			tableInst2 = jstable.create('container2', 3,3, {
+			tableInst1 = new JsTable('container1', 3,3);
+			tableInst2 = new JsTable('container2', 3,3, {
 				values: [['Hellow',2,3],[6,7,8],[11,12,13]], 
 				titleCols: ['Первый столбец','Второй столбец','Третий столбец'],
 				titleRows: ['Первая строка','Вторая строка','Третяя строка']
